# UfficioUrbanistica

./: .gitignore  README.md  docker-compose-nginx-staging.yml  docker-compose-staging-nginx.yml  docker-compose-staging.yml
project/: Dockerfile  pyproject.toml
project/demo_data/: readthedoc.docx
project/media-folder/demo_data/: calculus.xlsx
project/project/abstracts/: models.py
project/project/core/: admin.py  apps.py  context_processors.py  feed.py  models.py  sitemaps.py  urls.py
project/project/core/migrations/: 0001_initial.py  0002_rename_address_sitecustomization_contacts_and_more.py  0003_alter_sitecustomization_contacts.py  0004_delete_sitecustomization.py  0005_initial.py  0006_rename_site_description_sitecustomization_description_and_more.py  0007_alter_sitecustomization_header_image.py
project/project/fixtures/sections/: section.json  sectionpost.json
project/project/fixtures/usermanager/: placeholder  userprofile.json
project/project/link/: __init__.py  admin.py  apps.py  context_processors.py  models.py
project/project/link/migrations/: 0001_initial.py  0002_alter_link_url.py  0003_alter_link_column.py  (+2 more)
project/project/media/: admin.py  context_processors.py  models.py
project/project/opengeodata/: __init__.py  admin.py  apps.py  feed.py  models.py  sitemaps.py  urls.py  utils.py  views.py
project/project/project/: __init__.py  default_contents.py  settings.py  urls.py
project/project/sections/: __init__.py  admin.py  apps.py  feed.py  models.py  sitemaps.py  urls.py  utils.py  views.py
project/project/templates/: base.html
project/project/usermanager/: __init__.py  admin.py  apps.py  models.py
project/scripts/: backup-fixtures.sh  entrypoint.sh  local_backup-fixtures.sh  local_backup_fixtures.sh  local_restore-fixtures.sh  local_restore_fixtures.sh  make-fixtures-folders.sh  make_fixtures_folders.sh  migrate-collectstatic.sh  migrate-collectstic.sh  restore-fixtures.sh  start_project-production.sh  start_project-staging.sh  start_project_development.sh  start_project_production.sh  start_project_staging.sh  test.sh
project/scripts/production/: start_project-production.sh
project/scripts/staging/: create_db.sh  create_env_file.sh  delete_db.sh
(+73 files in other folders)
