[tool.poetry]
name = "ufficiourbanistica"
version = "0.1.0"
description = "Geo-CMS per la condivisione di notizie da parte degli uffici tecnici della PA"
authors = ["Massimiliano Moraca <info@massimilianomoraca.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"
django-environ = "^0.10.0"
django-cors-headers = "^4.2.0"
django-jazzmin = "^2.6.0"
djangorestframework = "^3.14.0"
djangorestframework-gis = "^1.0"
django-tinymce = "^3.6.1"
design-django-theme = "^2.4.2"
pillow = "^10.0.0"
geopandas = "^0.13.2"
owslib = "^0.29.2"
fsspec = "^2023.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
