[tool.poetry]
name = "ufficiourbanistica"
version = "0.1.0"
description = "Geo-CMS per la condivisione di notizie da parte degli uffici tecnici della PA"
authors = ["Massimiliano Moraca <info@massimilianomoraca.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.1"
django-jazzmin = "^2.6.0"
djangorestframework = "^3.14.0"
djangorestframework-gis = "^1.0"
django-tinymce = "^3.6.1"
design-django-theme = "^2.7.0.post1"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
geopandas = "^0.14.1"
owslib = "^0.29.3"
fsspec = "^2023.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
